@@ -1,3 +1,9 @@
+2007-11-16  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/locale_facets.tcc (__verify_grouping): Move...
+	* src/locale_facets.cc: ... here.
+	* config/abi/pre/gnu.ver: Update exports.
+
 2007-11-15  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/istream.tcc (basic_istream<>::sentry::
